feat: secoes home

--- a/src/components/Titulo/Titulo.module.css
+++ b/src/components/Titulo/Titulo.module.css
@@ -1,13 +1,15 @@
 .titulo {
   background-color: #6BD1FF;
-  width: 200px;
+  display: inline-flex;
+  width: 350px;
   color: white;
-  font-size: 1.5rem;
+  font-size: 1rem;
   text-align: center;
-  border-radius: 4px;
+  border-radius: .5rem;
+  justify-content: center;
 }
 
 .titulo h2 {
-  padding: 1rem;
+  padding: 0 .8rem;
   font-weight: 800;
 }
