--- a/src/components/HeaderLink/HeaderLink.module.css
+++ b/src/components/HeaderLink/HeaderLink.module.css
@@ -2,7 +2,7 @@
   text-decoration: none;
   color: white;
   border: 2px solid white;
-  border-radius: 5px;
+  border-radius: .5rem;
   padding: 0.3rem 1.5rem;
   font-size: 1rem;
   font-family: var(--fonte-secundaria);
