--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 :root {
   --cinza-escuro: rgba(0, 0, 0, 0.918);;
   --azul-escuro: #2271D1;
+  --azul-marinho: #03122F;
   --fonte-principal: "Roboto", sans-serif;
   --fonte-secundaria: "Source Sans 3", sans-serif;
 }
