--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,6 +3,7 @@
   border-bottom: 4px solid var(--azul-escuro);
   box-shadow: rgba(34, 113, 209, 0.3) 0px 19px 38px, rgba(34, 113, 209, 0.22) 0px 15px 12px;
   padding: 1.5rem 2rem;
+  z-index: 100;
 }
 
 .cabecalho nav {
