--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -62,6 +62,10 @@
   font-family: var(--fonte-secundaria);
 }
 
+.formulario textarea {
+  padding: .8rem .5rem;
+}
+
 .formulario select {
   padding: .8rem .5rem;
   font-family: var(--fonte-secundaria);
