--- a/src/pages/NovoVideo/NovoVideo.module.css
+++ b/src/pages/NovoVideo/NovoVideo.module.css
@@ -57,6 +57,10 @@
   color: white;
 }
 
+.formulario textarea {
+  padding: .8rem .5rem;
+}
+
 .formulario select option {
   color: rgb(0, 0, 0);
 }
