--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -5,3 +5,28 @@
   padding: 1.5rem 2rem;
   text-align: center;
 }
+
+.footerM {
+  display: none;
+}
+
+@media (max-width: 550px) {
+  .footer {
+    display: none;
+  }
+  .footerM {
+    display: flex;
+    border-top: 4px solid var(--azul-escuro);
+    box-shadow: rgba(34, 113, 209, 0.3) 0px -19px 38px, rgba(34, 113, 209, 0.22) 0px -15px 12px;
+    background-color: black;
+    padding: 2rem;
+    justify-content: center;
+    
+  }
+
+  .footerM nav {
+    display: flex;
+    gap: 4rem;
+  }
+
+}
