--- a/src/components/HeaderLink/HeaderLink.module.css
+++ b/src/components/HeaderLink/HeaderLink.module.css
@@ -22,3 +22,9 @@
   border-color: var(--azul-escuro);
   box-shadow: rgba(34, 113, 209, 0.3) 0px -40px 36px -28px inset;
 }
+
+@media (max-width: 550px) {
+  .link {
+    border-radius: 2rem;
+  }
+}
