--- a/src/components/SecaoCategoria/SecaoCategoria.module.css
+++ b/src/components/SecaoCategoria/SecaoCategoria.module.css
@@ -5,4 +5,17 @@
 .cardsContainer {
   display: flex;
   gap: 2rem;
+  flex-wrap: wrap;
+}
+
+@media (max-width: 720px) {
+  .cardsContainer {
+    justify-content: center;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
