--- a/src/pages/NovoVideo/NovoVideo.module.css
+++ b/src/pages/NovoVideo/NovoVideo.module.css
@@ -33,6 +33,7 @@
   display: flex;
   flex-direction: column;
   font-family: var(--fonte-secundaria);
+
 }
 
 .formulario label {
@@ -111,10 +112,57 @@
 .agrupamentoCampos {
   display: flex;
   flex-direction: column;
-
+  
 }
 
 .agrupamentoCampos input, select, textarea{
   width: 500px;
 }
 
+
+
+@media (max-width: 1330px) {
+  .formulario {
+    align-items: center;
+
+  }
+
+  .agrupamentoForms {
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+
+  }
+
+  .agrupamentoCampos {
+    justify-content: center;
+
+  }
+
+}
+
+
+@media (max-width: 600px) {
+
+
+  .agrupamentoCampos {
+    width: 100%;
+  }
+
+  .secaoNovoVideo {
+    padding: 0rem 5rem;
+  }
+
+  .formulario input {
+    width: 100%;
+  }
+
+  .formulario select {
+    width: 100%;
+  }
+
+  .formulario textarea {
+    width: 100%;
+  }
+
+}
